objects/ASI_CRM_CN_Area__c.object
<CustomObject>
    <description>ASI_CRM_CN_Area</description>
    <fields>
        <fullName>ASI_CRM_CN_Area_Code__c</fullName>
        <label>Area Code</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ASI_CRM_CN_Area_Manager__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Area Manager</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>User.CompanyName</field>
                <operation>equals</operation>
                <value>Pernod Ricard China</value>
            </filterItems>
            <filterItems>
                <field>$Source.RecordTypeId</field>
                <operation>equals</operation>
                <value>CN Area</value>
            </filterItems>
            <isOptional>true</isOptional>
        </lookupFilter>
        <referenceTo>User</referenceTo>
        <relationshipName>Area</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>ASI_CRM_CN_Chinese_Name__c</fullName>
        <label>Chinese Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ASI_CRM_CN_Copy_Great_Region__c</fullName>
        <label>Copy Great Region</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ASI_CRM_CN_Greater_Region_Code_Text__c</fullName>
        <label>Greater Region Code (Text)</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ASI_CRM_CN_Greater_Region_Code__c</fullName>
        <formula>ASI_CRM_Division__r.ASI_CRM_Region__r.ASI_CRM_Greater_Region__r.ASI_CRM_Greater_Region__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Greater Region Code</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ASI_CRM_CN_Sequence__c</fullName>
        <label>Sequence</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ASI_CRM_Division__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Division</label>
        <referenceTo>ASI_CRM_Division__c</referenceTo>
        <relationshipLabel>Area</relationshipLabel>
        <relationshipName>Area</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>ASI_CRM_English_Name__c</fullName>
        <label>English Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ASI_CRM_External_ID__c</fullName>
        <externalId>true</externalId>
        <label>External ID</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ASI_CRM_Inactive__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Inactive</label>
        <type>Checkbox</type>
    </fields>
    <label>Area</label>
    <listViews>
        <fullName>ASI_CRM_CN_Area</fullName>
        <columns>NAME</columns>
        <columns>ASI_CRM_CN_Chinese_Name__c</columns>
        <columns>ASI_CRM_English_Name__c</columns>
        <columns>ASI_CRM_CN_Area_Code__c</columns>
        <columns>ASI_CRM_CN_Area_Manager__c</columns>
        <columns>ASI_CRM_Division__c</columns>
        <columns>ASI_CRM_Inactive__c</columns>
        <columns>ASI_CRM_CN_Sequence__c</columns>
        <columns>ASI_CRM_External_ID__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>RECORDTYPE</field>
            <operation>equals</operation>
            <value>ASI_CRM_CN_Area__c.ASI_CRM_CN_Area</value>
        </filters>
        <label>CN Area</label>
        <language>en_US</language>
        <sharedTo>
            <roleAndSubordinates>ASI_CN</roleAndSubordinates>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>ASI_CRM_Division__c</columns>
        <columns>ASI_CRM_CN_Area_Manager__c</columns>
        <columns>ASI_CRM_CN_Area_Code__c</columns>
        <columns>ASI_CRM_CN_Greater_Region_Code__c</columns>
        <columns>ASI_CRM_CN_Greater_Region_Code_Text__c</columns>
        <columns>ASI_CRM_CN_Chinese_Name__c</columns>
        <columns>ASI_CRM_English_Name__c</columns>
        <columns>ASI_CRM_Inactive__c</columns>
        <columns>ASI_CRM_CN_Sequence__c</columns>
        <columns>RECORDTYPE</columns>
        <columns>OWNER.ALIAS</columns>
        <columns>OWNER.FIRST_NAME</columns>
        <columns>OWNER.LAST_NAME</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>CN_Area_li</fullName>
        <columns>NAME</columns>
        <columns>ASI_CRM_CN_Chinese_Name__c</columns>
        <columns>ASI_CRM_English_Name__c</columns>
        <columns>ASI_CRM_CN_Area_Code__c</columns>
        <columns>ASI_CRM_CN_Area_Manager__c</columns>
        <columns>ASI_CRM_Division__c</columns>
        <columns>ASI_CRM_Inactive__c</columns>
        <columns>ASI_CRM_CN_Sequence__c</columns>
        <columns>ASI_CRM_External_ID__c</columns>
        <columns>OBJECT_ID</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>RECORDTYPE</field>
            <operation>equals</operation>
            <value>ASI_CRM_CN_Area__c.ASI_CRM_CN_Area</value>
        </filters>
        <label>CN Area-li</label>
        <language>en_US</language>
        <sharedTo>
            <roleAndSubordinates>ASI_CN</roleAndSubordinates>
        </sharedTo>
    </listViews>
    <nameField>
        <label>Area Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Area</pluralLabel>
    <recordTypes>
        <fullName>ASI_CRM_CN_Area</fullName>
        <active>true</active>
        <label>CN Area</label>
    </recordTypes>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>